--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: CRDA Scan
         id: scan
-        uses: redhat-actions/crda@add-upload-sarif
+        uses: divyansh42/crda@add-upload-sarif
         with:
           manifest_file_path: requirements.txt
           # crda_key: ${{ secrets.CRDA_KEY }}
