--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -30,6 +30,7 @@ jobs:
           # crda_key: ${{ secrets.CRDA_KEY }}
           analysis_report_file_name: python
           snyk_token: ${{ secrets.SNYK_TOKEN }}
+          fail_on_vulnerability: false
           consent_telemetry: true
 
       - name: Print Analysis Report
