--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -7,13 +7,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          path: test
 
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.6'
 
       - run: |
-          pip install -r requirements.txt
+          ls
+          pip install -r test/requirements.txt
 
       - name: Install CRDA
         uses: redhat-actions/openshift-tools-installer@v1
@@ -26,7 +29,7 @@ jobs:
         id: scan
         uses: divyansh42/crda@add-upload-sarif
         with:
-          manifest_file_path: requirements.txt
+          manifest_file_path: test/requirements.txt
           # crda_key: ${{ secrets.CRDA_KEY }}
           analysis_report_file_name: python
           snyk_token: ${{ secrets.SNYK_TOKEN }}
