--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -49,7 +49,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: ${{ steps.scan.outputs.crda_report_sarif }}
-          checkout_path: test
+          # checkout_path: test
 
       - name: Save intermediate files
         run: |
